<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textView_Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:text="@string/textView_name" />
        <EditText
            android:id="@+id/editText_Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/editText_name"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textView_PhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:text="@string/textView_phoneNumber" />
        <EditText
            android:id="@+id/editText_Phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="phone"
            android:hint="@string/editText_phoneNumber"/>
    </LinearLayout>

    <Button
        android:id="@+id/button_BlockedNumbers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_addToBlock"
        android:onClick="functionAddNumber"/>
    <Button
        android:id="@+id/button_Read"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_readAllBlockedNumbers"
        android:onClick="functionReadAllNumbers" />

</LinearLayout>
