<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textView_Keyword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:text="@string/textView_keyword" />
        <EditText
            android:id="@+id/editText_Keyword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/editText_keyword"/>
    </LinearLayout>

    <Button
        android:id="@+id/button_addToBlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_addToBlock"
        android:onClick="functionAddKeyword"/>
    <Button
        android:id="@+id/button_read"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_readAllBlockedKeywords"
        android:onClick="functionReadAllKeywords"/>


</LinearLayout>
